update HF slide

--- a/paper slide/DFT/main.tex
+++ b/paper slide/DFT/main.tex
@@ -37,63 +37,133 @@
 % \end{figure}
 \end{frame}
 
-\begin{frame}{Chemists' notation}
-	
-\end{frame}
+% \begin{frame}{Chemists' notation}
+% 	\begin{equation*}
+% 		\begin{aligned}
+% 			f(\opi) & := f(\mfr_i), 		\\
+			
+% 		\end{aligned}
+% 	\end{equation*}
+% 	NOTE: We omit the discussion of the spin orbitals.
+% \end{frame}
 
-\begin{frame}
-	The many-body Schr\"odinger equation is given by:
+\begin{frame}{Many-body Schr\"odinger equation}
+	After Born–Oppenheimer approximation, the many-body Schr\"odinger equation
+	is given by:
 	\begin{equation*}
 		\begin{aligned}
-			\opH^e \Psi(1, 2, ..., N) = E \Psi(1, 2, ..., N),		\\
-			
+			\hat{\opH^e} & \Psi(\mfr_1, \mfr_2, ..., \mfr_N) = E
+			\Psi(\mfr_1, \mfr_2, ..., \mfr_N),		\\
+			\hat{\opH^e} & = -\half \Delta_{\mfr} - \sum_{i=1}^N\sum_{j=1}^{n_A} \frac{Z_j}
+			{\norml \mfr_i - \mfR_j \normr_2} + \frac{1}{2} \sum_{i \neq j}^N
+			\frac{1}{r_{ij}}		\\
+			& = \sum_{i=1}^N \wht{\operatorname{h}}(\text{i}) + \frac{1}{2} \sum_{i \neq j}^N
+			\frac{1}{r_{ij}}
 		\end{aligned}
 	\end{equation*}
+	Solving this equation, we can obtain the ground state energy, potential
+	energy surface (for geometry optimization and transition states search),
+	band structure for the solid state system, and etc.
 \end{frame}
 
-\begin{frame}{Slater determinant}
-	The many-body wave function of the Hartree-Fock theory is given by a single
-Slater determinant:
-\begin{equation*}
-  \lv \Psi_{\text{HF}} \ra = \frac{1}{\sqrt{N!}} 
-\begin{vmatrix}
-\phi_1(1) & \phi_1(2) & \cdots & \phi_1(N) \\
-\phi_2(1) & \phi_2(2) & \cdots & \phi_2(N) \\
-\vdots & \vdots & \ddots & \vdots \\
-\phi_N(1) & \phi_N(\mathbf{r}_2) & \cdots & \phi_N(\mathbf{r}_N)
-\end{vmatrix},
-\end{equation*}
-\end{frame}
-
-\begin{frame}{Hartree-Fock energy}
-	Given a Slater determinant $\lv \Psi_{\text{HF}} \ra$, the energy is given
-	by:
+\begin{frame}{Mean-field approximation: Slater determinant}
+	Pauli exclusion principle requires following antisymmetric constraint on the
+	many-body wave function:
 	\begin{equation*}
-		\begin{aligned} E[\Psi^{HF}] &= \left\langle\Psi^{HF}|\hat{\opH^e}|\Psi^{HF}
-			\right\rangle \\
-			&=  \sum_{i=1}^N \int\text{d}\mathbf{x}_i \, \phi_i^*(\mathbf{x}_i)
-			\hat{h}(\mathbf{x}_i) \phi_i(\mathbf{x}_i) \\ 
-			&+ \frac{1}{2} \sum_{i=1}^N\sum_{j=1}^N \int \mathrm{d}\mathbf{x}_i \int
-			\text{d}\mathbf{x}_j \phi_i^*(\mathbf{x}_i)\phi_j^*(\mathbf{x}_j)
-			\frac{1}{|\mathbf{x}_i-\mathbf{x}_j|}\phi_i(\mathbf{x}_i)
-			\phi_j(\mathbf{x}_j) \\ 
-			&- \frac{1}{2} \sum_{i=1}^N\sum_{j=1}^N \int \text{d}\mathbf{x}_i \int
-			 \text{d}\mathbf{x}_j\phi_i^*(\mathbf{x}_i)\phi_j^*(\mathbf{x}_j)
-			  \frac{1}{|\mathbf{x}_i-\mathbf{x}_j|}\phi_i(\mathbf{x}_j)
-				\phi_j(\mathbf{x}_i)  
+		\Psi_{\text{HF}}(..., \mfr_j, ..., \mfr_i, ...) = 
+		- \Psi_{\text{HF}}(..., \mfr_i, ..., \mfr_j, ...)
+	\end{equation*}
+
+	The many-body wave function of the Hartree-Fock theory is given by a single
+	Slater determinant:
+	\begin{equation*}
+		\Psi_{\text{HF}}(\mfr_1, ..., \mfr_N) = \frac{1}{\sqrt{N!}} 
+		\begin{vmatrix}
+			\phi_1(\mfr_1) & \phi_1(\mfr_2) & \cdots & \phi_1(\mfr_N) \\
+			\phi_2(\mfr_1) & \phi_2(\mfr_2) & \cdots & \phi_2(\mfr_N) \\
+			\vdots & \vdots & \ddots & \vdots \\
+			\phi_N(\mfr_1) & \phi_N(\mfr_2) & \cdots & \phi_N(\mfr_N)
+		\end{vmatrix}
+	\end{equation*}
+	{\color{red} This part is still a bit confusing for math audience.}
+\end{frame}
+
+\begin{frame}{Total energy}
+	\begin{equation*}
+		\begin{aligned} & E[\Psi^{HF}] = 
+			\left\langle\Psi^{HF}|\hat{\opH^e}|\Psi^{HF}
+			\right\rangle =  \sum_{i=1}^N \int\text{d}\mathbf{r}_i
+		  \phi_i^*(\mathbf{r}_i)
+			\wht{\operatorname{h}}(\text{i}) \phi_i(\mathbf{r}_i) \\ 
+			&+ \frac{1}{2N(N - 1)} \sum_{i \neq j}^N \sum_{k \neq l}^N \iint
+			\mathrm{d}\mathbf{r}_i
+			\text{d}\mathbf{r}_j \phi_k^*(\mathbf{r}_i)\phi_l^*(\mathbf{r}_j)
+			\frac{1}{|\mathbf{r}_i-\mathbf{r}_j|}\phi_k(\mathbf{r}_i)
+			\phi_l(\mathbf{r}_j) \\ 
+			&- \frac{1}{2N(N - 1)} \sum_{i \neq j}^N \sum_{k \neq l}^N \iint
+			\text{d}\mathbf{r}_i
+			\text{d}\mathbf{r}_j\phi_k^*(\mathbf{r}_i)\phi_l^*(\mathbf{r}_j)
+			\frac{1}{|\mathbf{r}_i-\mathbf{r}_j|}\phi_k(\mathbf{r}_j)
+			\phi_l(\mathbf{r}_i)  \\
+			& = E(\phi_1, \phi_2, \cdots, \phi_N).
 		\end{aligned}
 	\end{equation*}
 	Minimizing the total energy will give the ground state configuration which is
-	consistent with the self-consisten field approach.
+	consistent with the self-consistent field approach. The double-electron
+	integrations $O(N^4)$ are the dominant part of computational cost.
+\end{frame}
+
+\begin{frame}{Basis set\footnotemark}
+	\begin{itemize}
+		\item Slater basis functions:
+		\begin{equation*}
+			\varphi_{a, A, \alpha}^{\opS} \equiv (x - A_x)^{a_x} (y - A_y)^{a_y}
+			(z - A_z)^{a_z} e^{-\alpha \norml \mfr - \mfA \normr_2}.
+		\end{equation*}
+		\item Gaussian basis functions:
+		\begin{equation*}
+			\varphi_{a, A, \alpha}^{\opG} \equiv (x - A_x)^{a_x} (y - A_y)^{a_y}
+			(z - A_z)^{a_z} e^{-\alpha \norml \mfr - \mfA \normr_2^2}.
+		\end{equation*}
+		\item Contracted Gaussian basis functions:
+		\begin{equation*}
+			\varphi_{a, A, \alpha, k}^{\opc\opG} \equiv \sum_{k=1}^{K_A}
+			D_{aAk}(x - A_x)^{a_x}(y - A_y)^{a_y}(z - A_z)^{a_z}
+			e^{-\alpha_k \norml \mfr - \mfA \normr_2^2}.
+		\end{equation*}
+		\item Gaussian Lobe functions:
+		\begin{equation*}
+			\varphi_{a, A, \alpha, k}^{\opc\opG} \equiv \sum_{k=1}^{K_A}
+			D_{aAk}e^{-\alpha \norml \mfr - \mfA \normr_2^2}.
+		\end{equation*}
+	\end{itemize}
+	\footnotetext{Gill, Peter MW. "Molecular integrals over gaussian basis
+	functions." Advances in quantum chemistry. Vol. 25. Academic Press, 1994.
+	141-205.}
+\end{frame}
+
+\begin{frame}{A primer on molecular integral over Gaussian basis functions}
+	It suffices to evaluate the fundamental integrals:
+	\begin{equation*}
+		\iint e^{-\alpha \norml \mfr_1 - \mfA \normr_2^2}
+		e^{-\beta \norml \mfr_2 - \mfB \normr_2^2} f(r_{12})
+		e^{-\gamma \norml \mfr_1 - \mfC \normr_2^2}
+		e^{-\delta \norml \mfr_2 - \mfD \normr_2^2}d\mfr_1d\mfr_2.
+	\end{equation*}
+	Integrations involving higher angular momentum can be calculated by
+	taking the derivation w.r.t. $\mfr_1, \mfr_2$ and recursive formula.
+
+	{\color{red}Caveat: the recursive formula becomes very complex for higher
+	angular momentum and thus computationally expensive.}
 \end{frame}
 
 \begin{frame}{Basis set}
-	Classically, basis set of increasing complexity is used to 
-	\begin{itemize}
-		\item 1. STO-n 
-		\item 2. 6-311G*
-		\item 3. cc-pVDZ
-	\end{itemize}
+	% Classically, basis set of increasing complexity is used to 
+	% \begin{itemize}
+	% 	\item 1. STO-n 
+	% 	\item 2. 6-311G*
+	% 	\item 3. cc-pVDZ
+	% \end{itemize}
 	In this work, we propose to use the adaptive Gaussian basis with tunable
 	mean and covariance:
 	\begin{equation*}
@@ -103,6 +173,8 @@ Slater determinant:
 	\Sigma \in \lp \mbS_+^3 \rp^{|I|}, C \in \mbC^{|I|\times N}$. $|I|$ is the
 	size of the basis set, $N$ is the number of electrons (ground state +
 	excited state).
+	\footnotetext{Kerbl, Bernhard, et al. "3D Gaussian Splatting for Real-Time
+	Radiance Field Rendering." ACM Trans. Graph. 42.4 (2023): 139-1.}
 \end{frame}
 
 \begin{frame}{orthognormality and overlap matrix}
@@ -115,27 +187,95 @@ Slater determinant:
 	\end{equation*}
 	where $\opS$ is the overlap matrix defined as:
 	\begin{equation*}
-		\operatorname{S}_{ij} = \la \mcN\lp \mfr; \mathbf{\mu_1},
-    \Sigma_1 \rp \rv \left. \mcN\lp \mfr;
-    \mathbf{\mu_2}, \Sigma_2 \rp \ra.
+		\operatorname{S}_{ij} = \la \mcN\lp \mfr; \mathbf{\mu_i},
+    \Sigma_i \rp \rv \left. \mcN\lp \mfr;
+    \mathbf{\mu_j}, \Sigma_j \rp \ra.
 	\end{equation*}
 	The orthognormality is enforced by QR decomposition modified by the
 	Cholesky factorization of $\opS$.
 \end{frame}
 
-\begin{frame}{Coulumb and external energy}
-	Our primary idea is to approximate the Coulumb kernel by a series of
+\begin{frame}{Coulomb and external energy}
+	Our primary idea is to approximate the Coulomb kernel by a series of
 	Gaussian modes:
 	\begin{equation*}
 		\frac{1}{r} = \sum_i c_i e^{-\alpha_i r^2},
 	\end{equation*}
-	which is done by minimizing the 
+	which is done by minimizing the following
 	\begin{equation*}
 		\begin{aligned}
-			\min_{c_i, \alpha_i} \int_{B_M} \lp \frac{1}{|\mfr|} - \sum_i c_i e^{-\alpha_i |\mfr|^2} \rp^2 d\mfr
-			= \min_{c_i, \alpha_i} 4\pi\int_0^M \lp 1 - \sum_i c_i re^{-\alpha_i r^2} \rp^2 dr.
+			\min_{c_i, \alpha_i} \int_{B_M} \lp \frac{1}{|\mfr|} - \sum_i c_i
+			e^{-\alpha_i |\mfr|^2} \rp^2 d\mfr = 4\pi\int_0^M \lp 1 - \sum_i c_i
+			re^{-\alpha_i r^2} \rp^2 dr
 		\end{aligned}
 	\end{equation*}
+	Then we fix the number of Gaussian modes and optimize the analytic loss
+	function via gradient-based optimization.
+\end{frame}
+
+\begin{frame}{Analysis of the nonlinear optimization problem}
+	\begin{equation*}
+		\begin{aligned}
+			& \ \int_0^M \lp 1 - \sum_i c_i re^{-\alpha_i r^2} \rp^2 dr 
+			\overset{u = kr}{=} & \ \frac{1}{k}\int_0^{kM} \lp 1 - \sum_i \frac{c_i}{k} u 
+			e^{-\frac{\alpha_i}{k^2} u^2} \rp^2 du.
+		\end{aligned}
+	\end{equation*}
+	The optimal solution for different $M$ can be obtained by rescaling the optimal
+	coefficient and variance of the Gaussian modes.
+
+	However, optimizing such problem to a relatively low threshold, e.g. $10^{-5}$
+	is quite difficult.
+	\begin{figure}[h]
+		\centering
+		\includegraphics[width=0.5\linewidth]{fig/convergence.pdf}
+	\end{figure}
+\end{frame}
+
+\begin{frame}{Coulomb kernel decomposition}
+	\begin{figure}[h]
+		\centering
+		\includegraphics[width=\linewidth]{fig/modes_M50i20.pdf}
+	\end{figure}
+\end{frame}
+
+\begin{frame}{More on double electron integrals}
+	\begin{equation*}
+		\begin{aligned}
+			& \ \la \mcN\lp \mfr_1 | \mathbf{\mu_1}, \Sigma_1 \rp \rv \frac{1}{
+				\lv \mfr_1 - \mfr_2 \rv}\lv \mcN\lp \mfr_2 | \mathbf{\mu_2}, \Sigma_2
+				\rp \ra     \\
+			= & \ \int\int d\mfr_1d\mfr_2 \frac{1}{\sqrt{(2\pi)^6\det(\Sigma_1)
+			\det(\Sigma_2)}} \\
+			& \ \sum_i c_i  \exp\lb -\half\lp (\mfr_1 - \mu_1)^T
+			\Sigma_1^{-1}(\mfr_1 - \mu_1) \right.\right.		\\
+				& \ \left.\left. + (\mfr_2 - \mu_2)^T\Sigma_2^{-1}(\mfr_2 - \mu_2)\rp
+				- (\mfr_1 - \mfr_2)^T \alpha_i \operatorname{I} (\mfr_1 - \mfr_2) \rb
+			\\
+			= & \ \int\int d\mfr \frac{1}{\sqrt{(2\pi)^6\det(\Sigma_1)
+			\det(\Sigma_2)}}   \\
+			& \ \sum_i c_i s(i)\exp\lb -\half(\mfr - \mu(i))^T \begin{pmatrix}
+			\Sigma_1^{-1} + 2\alpha_i \operatorname{I} & -2\alpha_i \operatorname{I}
+			\\
+			-2\alpha_i \operatorname{I} & \Sigma_2^{-1} + 2\alpha_i \operatorname{I}
+			\end{pmatrix} (\mfr - \mu(i)) \rb.
+		\end{aligned}
+	\end{equation*}
+\end{frame}
+
+\begin{frame}{Potential improvement}
+	\begin{itemize}
+		\item 1. Using greedy algorithm to optimize for more Gaussian modes, i.e.
+		one can use the optimization results for less modes as the warm-start
+		for more modes.
+		\item 2. The approximation interval $[0, M]$ can be done adaptively according
+		to the relative position of two Gaussian modes.
+		\item 3. Motivated by the Boys function, can we design other decomposition
+		of the Coulomb kernel?
+		\begin{equation*}
+			\frac{1}{r} = C\int_{\mbR} e^{-r^2t^2} dt.
+		\end{equation*}
+	\end{itemize}
 \end{frame}
 
 \begin{frame}{Parameterization of Gaussian basis}
@@ -145,18 +285,20 @@ Slater determinant:
 	\end{equation*}
 	where $\opU_i$ is obtained from the QR decomposition and the positivity of
 	the diagonal element of $\opD_i$ is enforced by the softplus function.
+
+	This is proved to be more robust than parametrization by Cholesky
+	factorization.
 \end{frame}
 
 \begin{frame}{Numerical experiments}
 	\begin{table}[tb]\label{table:accuracy-2d-ot}
-		\caption{.}
 		\label{table:density-fitting}
 		\centering
-		% \small
+		\Large
 		\resizebox{0.95\columnwidth}{!}{
-		\begin{tabular}{P{3cm} P{2cm} P{2cm} P{2cm} P{2cm} P{2cm} P{2cm} P{2cm}}
+		\begin{tabular}{P{4cm} P{2cm} P{2cm} P{2cm} P{2cm} P{2cm} P{2cm} P{2cm}}
 		\toprule [1.5pt]
-		\parbox{3cm}{  } &   \parbox{2cm}{ \centering e\_kin + e\_ext} &
+		\parbox{4cm}{  } &   \parbox{2cm}{ \centering e\_kin + e\_ext} &
 		\parbox{2cm}{\centering  e\_kin}
 		& \parbox{2cm}{\centering  e\_ext} & 
 		\parbox{2cm}{ \centering e\_nuc } & \parbox{2cm}{ \centering 
@@ -164,7 +306,7 @@ Slater determinant:
 		e\_coul} & \parbox{2cm}{ \centering e\_exc} & \parbox{2cm}
 		{\centering  e\_tot}   \\ \midrule[1.5pt]
 		
-		\parbox{3cm}{OUR ($\ce{H2}$), 10} & -2.5062 & 1.1254 & -3.6316 & 0.7138 & 0.6591 &
+		\parbox{4cm}{OUR ($\ce{H2}$), 10} & -2.5062 & 1.1254 & -3.6316 & 0.7138 & 0.6591 &
 		1.3182 & -0.6591 & -1.1334 \\ \midrule[0.5pt]
 	
 		% \parbox{3cm}{$n_g= 10, \epsilon=10^{-3}$} & -2.4905 & 1.1070 & -3.5975
@@ -179,15 +321,15 @@ Slater determinant:
 		% \parbox{3cm}{$n_g = 10, \epsilon=10^{-4}$} & -2.4909 & 1.1078 & -3.5987
 		% & 0.7138 & 0.6550 & 1.3100 & -0.6550 & -1.1221 \\ \midrule[0.5pt]
 	
-		\parbox{3cm}{HF (STO-3G, 2)} 
+		\parbox{4cm}{HF (STO-3G, 2)} 
 		& -2.5049 &  * & * & 0.7138 & 0.6745 & * & * & -1.1167
 		\\ \midrule[0.5pt]
 	
-		\parbox{3cm}{HF (6-31G, 4)} 
+		\parbox{4cm}{HF (6-31G, 4)} 
 		& -2.4902 &  * & * & 0.7138 & 0.6497 & * & * & -1.1267
 		\\ \midrule[0.5pt]
 	
-		\parbox{3cm}{HF (6-311G, 6)} 
+		\parbox{4cm}{HF (6-311G, 6)} 
 		& -2.4924 &  * & * & 0.7138 & 0.6507 & * & * & -1.1280
 		\\ \midrule[0.5pt]
 	
@@ -218,18 +360,18 @@ Slater determinant:
 		% -117.0827 & 13.4477 & 24.9640 & 31.5523 &
 		% -6.5883 & -39.1532 \\ \midrule[0.5pt]
 	
-		\parbox{3cm}{OUR ($\ce{CH4}$), 22} & -79.6713 & 40.0987 & -119.7700 & 13.4477
+		\parbox{4cm}{OUR ($\ce{CH4}$), 22} & -79.6713 & 40.0987 & -119.7700 & 13.4477
 		& 26.1010 & 32.6936 & -6.5926 & -40.1225 \\ \midrule[0.5pt]
 	
-		\parbox{3cm}{HF (STO-3G, 9)} 
+		\parbox{4cm}{HF (STO-3G, 9)} 
 		& -79.3617 &  * & * & 13.4477 & 26.1872 & * & * & -39.7267
 		\\ \midrule[0.5pt]
 	
-		\parbox{3cm}{HF (6-31G, 17)} 
+		\parbox{4cm}{HF (6-31G, 17)} 
 		& -79.6901 &  * & * & 13.4477 & 26.0619 & * & * & -40.1804
 		\\ \midrule[0.5pt]
 	
-		\parbox{3cm}{HF (6-311G, 25)} 
+		\parbox{4cm}{HF (6-311G, 25)} 
 		& -79.6872 &  * & * & 13.4477 & 26.0515 & * & * & -40.1880
 		\\ \midrule[0.5pt]
 	
@@ -260,19 +402,19 @@ Slater determinant:
 		% -194.0456 & 9.1895 & 36.1289 & 45.0722 &
 		% -8.9433 & -74.2454 \\ \midrule[0.5pt]
 	
-		\parbox{3cm}{OUR ($\ce{H2O}$), 22} & -122.9802 & 75.9462 &
+		\parbox{4cm}{OUR ($\ce{H2O}$), 22} & -122.9802 & 75.9462 &
 		-199.0371 & 9.1895 & 37.8786 & 46.8579 &
 		-8.9601 & -76.0036 \\ \midrule[0.5pt]
 	
-		\parbox{3cm}{HF (STO-3G, 7)} 
+		\parbox{4cm}{HF (STO-3G, 7)} 
 		& -122.3614 &  * & * & 9.1895 & 38.2089 & * & * & -74.9630
 		\\ \midrule[0.5pt]
 	
-		\parbox{3cm}{HF (6-31G, 13)} 
+		\parbox{4cm}{HF (6-31G, 13)} 
 		& -122.9701 &  * & * & 9.1895 & 37.7966 & * & * & -75.9839
 		\\ \midrule[0.5pt]
 	
-		\parbox{3cm}{HF (6-311G, 19)} 
+		\parbox{4cm}{HF (6-311G, 19)} 
 		& -123.0146 &  * & * & 9.1895 & 37.8157 & * & * & -76.0094
 		\\ \midrule[0.5pt]
 	
@@ -294,8 +436,8 @@ Slater determinant:
 	\begin{itemize}
 		\item 1. Compare the scalability of the double-electron integral
 		calculation over the number of basis functions with the SOTA method, e.g.
-		MD, Rys, HDG.
-		\item 2. Evidence from numerical experiments to show that the adaptive
+		MD, HGP(OS), Rys.
+		\item 2. Conduct numerical experiments to check if the adaptive
 		Gaussian basis can achieve the same accuracy with a smaller number of
 		basis.
 		\item 3. Implement post HF method, e.g. CCSD, CCSD(T).
@@ -304,6 +446,30 @@ Slater determinant:
 
 \begin{frame}
 	Q \& A
+\end{frame}
+
+\begin{frame}{SCF}
+	Self-consistent field approach to HF: adding Lagrangian multiplier
+	(molecular orbital energy) and the KKT condition translates to an eigenvalue
+	problem:
+	\begin{equation*}
+		\begin{aligned}
+			\delta E[\phi_k^*(x_k)] & \ = \delta E(\phi_1, \phi_2, \cdots, \phi_N)
+			- \delta\left[\sum_{i=1}^N \sum_{j=1}^N
+			\lambda_{ij} \left( \left\langle\phi_i, \phi_j\right\rangle - \delta_{ij}
+			\right)\right]		\\
+			\wht \opF(\text{k})\phi_k(\mathbf{r}_k) & \equiv \left[ \hat{h}
+			(\text{k}) + \hat{J}(\text{k}) - \hat{K}(\text{k}) \right]
+			\phi_k(\mathbf{r}_k) = \epsilon_k \phi_k(\mathbf{r}_k),	\\
+			\wht \opJ(\text{k}) & \equiv \sum_{j=1}^N \int \mathrm{d}\mathbf{r}_j
+			\frac{\phi_j^*(\mathbf{r}_j) \phi_j(\mathbf{r}_j)}{|\mathbf{r}_k-
+			\mathbf{r}_j|}= \sum_{j=1}^N \int \mathrm{d}\mathbf{r}_j \frac{\rho(
+			\mathbf{r}_j)}{|\mathbf{r}_k-\mathbf{r}_j|},\\
+			\wht \opK(\text{k})\phi_{k}(\mathbf{r}_k) & \equiv  \sum_{j=1}^N
+			\phi_{j}(\mathbf{r}_k) \int \text{d}\mathbf{r}_j \frac{\phi_j^*
+			(\mathbf{r}_j) \phi_k(\mathbf{r}_j)}{|\mathbf{r}_k-\mathbf{r}_j|}.\\
+		\end{aligned}
+	\end{equation*}
 \end{frame}
 
 \begin{frame}{Motivation}
@@ -350,20 +516,21 @@ Slater determinant:
     \begin{thebibliography}{99} % Beamer does not support BibTeX so references must be inserted manually as below, you may need to use multiple columns and/or reduce the font size further if you have many references
         \footnotesize % Reduce the font size in the bibliography
  
-		\bibitem[BDI]{bdi}
-		M. Benjamin, S. Domino, and G. Iaccarino
-		\newblock Neural Networks for Large Eddy Simulations of Wall-bounded Turbulence: Numerical Experiments and Challenges
-		\newblock \emph{The European Physical Journal E}
+		\bibitem[migbs]{migbs}
+		Gill, Peter MW.
+		\newblock Molecular integrals over gaussian basis functions.
+		\newblock \emph{Advances in quantum chemistry. Vol. 25. Academic Press,
+		1994. 141-205.}
 
-		\bibitem[Zhao 2024]{ds}
-        J. Zhao and Q. Li (2024)
-        \newblock Mitigating Distribution Shift in Machine Learning-augmented Hybrid Simulation
-        \newblock \emph{Arxiv preprint https://arxiv.org/pdf/2401.09259}
+		\bibitem[3dgs]{3dgs}
+		Kerbl, Bernhard, et al
+		\newblock 3D Gaussian Splatting for Real-Time Radiance Field Rendering
+		\newblock \emph{ACM Trans. Graph. 42.4 (2023): 139-1.}
 
-        \bibitem[S.A. and Q.L., 2024]{nigbms}
-        S. Arisaka and Q. Li (2024)
-        \newblock Accelerating Legacy Numerical Solvers by Non-intrusive Gradient-based Meta-solving
-        \newblock \emph{International Conference on Machine Learning 2024}
+		\bibitem[S.A. and Q.L., 2024]{nigbms}
+		S. Arisaka and Q. Li (2024)
+		\newblock Accelerating Legacy Numerical Solvers by Non-intrusive Gradient-based Meta-solving
+		\newblock \emph{International Conference on Machine Learning 2024}
  
         
     \end{thebibliography}
