--- a/paper slide/probabilistic SGS/main.tex
+++ b/paper slide/probabilistic SGS/main.tex
@@ -15,7 +15,7 @@
 \geometry{left=1cm,right=1cm}
     \title[Probabilistic SGS modeling]{A probabilistic approach to 
 		subgrid-scale modeling}
-\author[J. Zhao]{Jiaxi Zhao \\ \small joint with Q. Li\@ NUS, N. Thuerey\@ TMU}
+\author[J. Zhao]{Jiaxi Zhao \\ \small joint with Q. Li\@ NUS, N. Thuerey\@ TUM}
 \date[\today]{NUS-SJTU PhD Forum \\ \today}
 \begin{document}
 \par \setlength{\parindent}{2em}
@@ -201,18 +201,18 @@
 \begin{frame}{A priori and a posteriori}
 	\begin{figure}[ht]
 		\centering
-		\begin{subfigure}[b]{0.33\textwidth}
+		\begin{subfigure}[b]{0.32\textwidth}
 			\centering 
 			\includegraphics[width=\textwidth]
 			{fig/ks_nu0.1_N1512N2256_correct_cmp_lr1e-4.pdf} 
 			\caption{validation loss: 3.5000e-05} 
 		\end{subfigure}
-		\begin{subfigure}[b]{0.33\textwidth}
+		\begin{subfigure}[b]{0.32\textwidth}
 			\centering 
 			\includegraphics[width=\textwidth]{fig/ks_nu0.1_N1512N2256_correct_cmp_lr2e-4.pdf} 
 			\caption{validation loss: 1.3050e-05} 
 		\end{subfigure}
-		\begin{subfigure}[b]{0.33\textwidth}
+		\begin{subfigure}[b]{0.32\textwidth}
 			\centering 
 			\includegraphics[width=\textwidth]{fig/ks_nu0.1_N1512N2256_correct_cmp_lr5e-4.pdf} 
 			\caption{validation loss: 2.8155e-05}  
