--- a/paper slide/Thesis defense/main.tex
+++ b/paper slide/Thesis defense/main.tex
@@ -109,4 +109,19 @@
 	The question is: \textit{How to go beyond linear?}
 \end{frame}
 
+\begin{frame}{Generative SGS modeling}
+	
+\end{frame}
+
+
+
+\begin{frame}{Code development}
+	Develop a codebase to implement different algorithm for improving the stability
+	of the hybrid solver, e.g. regularization-based method, active-leraning method, etc.
+
+	\url{https://github.com/jiaxi98/pyfoam}
+
+	\url{https://github.com/jiaxi98/ml4dynamics}
+\end{frame}
+
 \end{document}
