--- a/paper slide/Thesis defense/main.tex
+++ b/paper slide/Thesis defense/main.tex
@@ -119,9 +119,10 @@
 	Develop a codebase to implement different algorithm for improving the stability
 	of the hybrid solver, e.g. regularization-based method, active-leraning method, etc.
 
-	\url{https://github.com/jiaxi98/pyfoam}
-
 	\url{https://github.com/jiaxi98/ml4dynamics}
+
+	Data-driven turbulence modeling platform based on OpenFOAM
+	\url{https://github.com/jiaxi98/pyfoam}
 \end{frame}
 
 \end{document}
